# rust_study

./: .gitignore  Cargo.toml  README.md
migrations/: 20250405000000_create_posts_table.sql  20250405000001_create_comments_table.sql  20250405000002_create_users_table.sql
src/: main.rs
src/handlers/: auth_handler.rs  comment_handler.rs  post_handler.rs
src/middleware/: auth_middleware.rs
src/models/: comment.rs  mod.rs  post.rs  user.rs
src/services/: auth_service.rs  comment_service.rs  mod.rs  post_service.rs
tests/: auth_middleware_test.rs  auth_service_test.rs  comment_service_test.rs  post_handler_test.rs  post_service_test.rs
tests/common/: mod.rs
